--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "prebuild": "npm install -g firebase-tools",
     "build": "firebase deploy",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
