add token to build stage

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "prebuild": "npm install -g firebase-tools",
-    "build": "firebase deploy",
+    "build": "firebase deploy --token $FIREBASE_TOKEN",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
